<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="game_title">Connect 4!</string>
    <string name="app_name">connect Four</string>
    <string name="game_name">Connect Four</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="exit">Exit</string>
    <string name="adds">Adds goes here</string>
    <string name="settings_label">Settings...</string>
	<string name="settings_title">Connect Four settings</string>
	<string name="settings_shortcut">s</string>
</resources>
